--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 aiofiles>=23.2.1
 beautifulsoup4>=4.12.2
-crawl4ai>=0.1.0
+crawl4ai>=0.1.1
 python-dotenv>=1.0.0
 requests>=2.31.0
 aiohttp>=3.9.1
 tqdm>=4.66.1
 tenacity>=8.2.3
-Pillow>=9.5.0
+Pillow>=10.0.0
 urllib3>=1.26.16
 python-dateutil>=2.8.2
 openai>=1.3.7
@@ -16,7 +16,9 @@ torch>=2.0.1
 spacy>=3.6.1
 contractions>=0.1.73
 python-Levenshtein>=0.12.2
-appwrite>=1.1.0
-google-cloud-texttospeech>=2.12.0
-flask>=2.3.0
-gunicorn>=21.2.0 
+google-cloud-translate>=3.11.1
+PyPDF2>=3.0.1
+Flask>=2.3.3
+flask-cors>=4.0.0
+google-cloud-texttospeech>=2.14.1
+appwrite>=4.0.0 
